--- a/playbook/inventory/prod.yml
+++ b/playbook/inventory/prod.yml
@@ -1,6 +1,10 @@
 ---
 elasticsearch:
   hosts:
-    localhost:
-      ansible_connection: ssh
-      ansible_user: root
+    elastic:
+      ansible_connection: docker
+
+kibana:
+    hosts:
+      kibana:
+        ansible_connection: docker
