--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -38,14 +38,21 @@
 - name: Install Elasticsearch
   hosts: elasticsearch
   tasks:
+    # - name: Upload tar.gz Elasticsearch from remote URL
+    #   get_url:
+    #     url: "https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-{{ elastic_version }}-linux-x86_64.tar.gz"
+    #     dest: "/tmp/elasticsearch-{{ elastic_version }}-linux-x86_64.tar.gz"
+    #     mode: 0755
+    #     timeout: 60
+    #     force: true
+    #     validate_certs: false
+    #   register: get_elastic
+    #   until: get_elastic is succeeded
+    #   tags: elastic
     - name: Upload tar.gz Elasticsearch from remote URL
-      get_url:
-        url: "https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-{{ elastic_version }}-linux-x86_64.tar.gz"
+      copy:
+        src: "elasticsearch-{{ elastic_version }}-linux-x86_64.tar.gz"
         dest: "/tmp/elasticsearch-{{ elastic_version }}-linux-x86_64.tar.gz"
-        mode: 0755
-        timeout: 60
-        force: true
-        validate_certs: false
       register: get_elastic
       until: get_elastic is succeeded
       tags: elastic
@@ -70,3 +77,35 @@
         src: templates/elk.sh.j2
         dest: /etc/profile.d/elk.sh
       tags: elastic
+- name: Install Kibana
+  hosts: kibana
+  tasks:
+    - name: Upload tar.gz Kibana from remote URL
+      copy:
+        src: "kibana-{{ kibana_version }}-linux-x86_64.tar.gz"
+        dest: "/tmp/kibana-{{ kibana_version }}-linux-x86_64.tar.gz"
+      register: get_kibana
+      until: get_kibana is succeeded
+      tags: kibana
+    - name: Create directrory for Kibana ({{ kibana_home }})
+      file:
+        path: "{{ kibana_home }}"
+        state: directory
+      tags: kibana
+    - name: Extract Kibana in the installation directory
+      become: true
+      unarchive:
+        copy: false
+        src: "/tmp/kibana-{{ kibana_version }}-linux-x86_64.tar.gz"
+        dest: "{{ kibana_home }}"
+        extra_opts: [--strip-components=1]
+        creates: "{{ kibana_home }}/bin/kibana"
+      tags:
+        - skip_ansible_lint
+        - kibana
+    - name: Set environment Kibana
+      become: true
+      template:
+        src: templates/kib.sh.j2
+        dest: /etc/profile.d/kib.sh
+      tags: kibana
